
[project]
name = "lacia"
version = "0.2.0"
description = "A modern `Json-Rpc/Bson-Rpc` implementation, compatible with `Json-Rpc Ast` and `Json-Rpc 2.0` and `Json-Rpc X`, supports multiple network protocols and backend frameworks and supports bidirectional calls."
authors = [
    {name = "luxuncang", email = "luxuncang@qq.com"},
]
dependencies = [
    "richuru>=0.1.1",
    "nest-asyncio>=1.5.8",
    "aiohttp>=3.8.6",
    "orjson>=3.9.10",
    "bson>=0.5.10",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.5",
]
